--- a/result5.html
+++ b/result5.html
@@ -26,7 +26,7 @@
 <body>
     <div class="container">
         <h1>Result</h1>
-        <p>Your password has been analyzed. Thank you!</p>
+        <p>Your Id has been analyzed.your Id is safe. Thank you!</p>
         <button onclick="window.location.href='index.html'">Back to Login</button>
     </div>
 </body>
